--- a/gb/17/4/11/n9025454.md
+++ b/gb/17/4/11/n9025454.md
@@ -1,27 +1,27 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liahn236/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/liahn236/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/liahn236/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/liahn236/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/liahn236/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/liahn236/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/liahn236/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/liahn236/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/liahn236/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/liahn236/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>别吃这12种海鲜！为何不要吃 + 吃什么鱼好</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/04/shutterstock_256621606-1-600x400.jpg" />
 <h6>鱼类营养，但有些种类含毒素较多。哪些鱼类健康，哪些鱼类应尽量少吃？(Shutterstock)
 </h6>
 <hr>
-<p><a href="https://github.com/liahn236/djy/blob/master/gb/tag/%E9%B1%BC.md">鱼</a>与余谐音，所以自古以来，人们喜欢在年夜饭时吃条鱼，讨个“年年有余”的喜气；在平日里，鱼也是餐桌上的佳肴。然而，近年来因人类过度捕捞致使海洋生态失衡，加上污染日益严重，在买鱼时该如何挑选，已变成重要的议题。</p>
-<p>究竟哪些<a href="https://github.com/liahn236/djy/blob/master/gb/tag/%E9%B1%BC.md">鱼</a>才能真正为营养加分、避免吃下太多污染物，并帮助海洋生生不息，使子孙们仍“年年有鱼”呢？</p>
+<p><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%B1%BC.md#1">鱼</a>与余谐音，所以自古以来，人们喜欢在年夜饭时吃条鱼，讨个“年年有余”的喜气；在平日里，鱼也是餐桌上的佳肴。然而，近年来因人类过度捕捞致使海洋生态失衡，加上污染日益严重，在买鱼时该如何挑选，已变成重要的议题。</p>
+<p>究竟哪些<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%B1%BC.md#1">鱼</a>才能真正为营养加分、避免吃下太多污染物，并帮助海洋生生不息，使子孙们仍“年年有鱼”呢？</p>
 <h2><span style="color: #188638;">挑鱼时注意事项</span></h2>
 <p>根据联合国农粮署的资料，1950年全球的海产供应量仅约2000万公吨。到了2016年，这个数字已增加到1亿7100万公吨，成长为8倍多，其中只有47%来自水产养殖。</p>
-<p>在过度捕捞下，曾被认为取之不尽的渔业资源也渐渐匮乏。再加上工业废水、酸雨、雾霾等污染，让某些鱼类中含有过多污染物。因此，许多国家皆推出《<a href="https://github.com/liahn236/djy/blob/master/gb/tag/%E6%B5%B7%E9%B2%9C.md">海鲜</a>指南》，提醒民众如何选购安全、对环境友善的食用鱼。</p>
+<p>在过度捕捞下，曾被认为取之不尽的渔业资源也渐渐匮乏。再加上工业废水、酸雨、雾霾等污染，让某些鱼类中含有过多污染物。因此，许多国家皆推出《<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B5%B7%E9%B2%9C.md#1">海鲜</a>指南》，提醒民众如何选购安全、对环境友善的食用鱼。</p>
 <p><strong>1. 购买常见种，少买稀有种：</strong>常见种数量多，生命周期短，繁殖速度快，有较高的生态恢复力。</p>
 <p><strong>2. 吃小不吃大，依循底食原则：</strong>许多污染物（如：甲基汞、多氯联苯等），会随着食物链累积，因此，食用海洋中的顶层掠食者，很容易吃进过多污染物。建议选择食物链中层与底层的鱼种，对生态影响较小，也更安全。</p>
 <p><strong>3. 选择银白鱼，避免彩色鱼：</strong>色彩斑斓的鱼类，多定栖于岩礁或珊瑚礁，种类多而数量少，任意捕捞很容易破坏生态。银白色的鱼多属于洄游性鱼类，种类少而数量多，繁殖力也较高。此外，食用珊瑚礁区鱼类，也容易中毒！</p>
 <p>珊瑚礁区有一些含有“雪卡毒素（Ciguatoxins）”的藻类，毒素通过食物链累积于鱼儿体内，人们误食后会产生冷热感觉颠倒的症状，轻则造成肠胃不适，重则引发神经与心血管疾病，甚至会休克。</p>
-<p><strong>4. 选择对环境友善的渔法：</strong>即使是同样的鱼种，不同渔法对环境影响差异也很大，应选择对生态影响较小的渔获。可选择有永续渔产标章的<a href="https://github.com/liahn236/djy/blob/master/gb/tag/%E6%B5%B7%E9%B2%9C.md">海鲜</a>，例如：海洋管理委员会 MSC 标章、水产养殖管理委员会的 ASC 标章，或船钓捕获的水产。</p>
+<p><strong>4. 选择对环境友善的渔法：</strong>即使是同样的鱼种，不同渔法对环境影响差异也很大，应选择对生态影响较小的渔获。可选择有永续渔产标章的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B5%B7%E9%B2%9C.md#1">海鲜</a>，例如：海洋管理委员会 MSC 标章、水产养殖管理委员会的 ASC 标章，或船钓捕获的水产。</p>
 <p>在捕捞作业中，时常会误捕（bycatch）其它海洋生物，像是小鱼、鲸豚、海龟、海鸟、企鹅等，渔民虽然会将它们放回海里，但是大多都已受伤或死亡，选择适当的渔具、渔法或渔场，可有效减低误捕的比例。根据刊登在《海洋政策》（Marine Policy）上的一项调查，在捕鱼作业中，每年误捕占全球海洋捕捞量的40.4％，对海洋资源是极大的浪费。世界自然基金会的调查亦指出，每年误捕估计造成30万头鲸豚、25万只海龟、30万只海鸟的死亡。</p>
 <p><strong>5. 选择植食性养殖鱼类：</strong>在养殖鱼类中，应选择成长快，对动物性蛋白质需求低的品种。因为肉食性的养殖鱼类，饲料终究来自杂鱼或鱼粉，因为价格考量，有些地区甚至将原本就可食用的小型鱼制成鱼粉，来喂养价格高的养殖鱼，造成不必要的浪费。</p>
 <p>那么，究竟什么鱼不能吃？有什么更好的替代鱼类呢？以下是来自专家们的建议。</p>
 <h2><span style="color: #188638;">不该吃的12种鱼类和海鲜，以及替代选择</span></h2>
 <h3><strong>1. 鲨鱼</strong></h3>
-<figure id="attachment_11859028" style="width: 600px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2017/04/shutterstock_162337214.jpg"><img class="size-large wp-image-11859028" src="https://i.epochtimes.com/assets/uploads/2017/04/shutterstock_162337214-600x400.jpg" alt="鲨鱼处于食物链上端，容易累积较多的汞污染。(Shutterstock)" width="600" b="400" /></a><figcaption class="wp-caption-text">鲨鱼处于食物链上端，容易累积较多的汞污染。(Shutterstock)</figcaption></figure>
+<figure id="attachment_11859028" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/04/shutterstock_162337214.jpg"><img class="size-large wp-image-11859028" src="https://i.epochtimes.com/assets/uploads/2017/04/shutterstock_162337214-600x400.jpg" alt="鲨鱼处于食物链上端，容易累积较多的汞污染。(Shutterstock)" width="600" b="400" /></a><figcaption class="wp-caption-text">鲨鱼处于食物链上端，容易累积较多的汞污染。(Shutterstock)</figcaption></figure>
 <p>鲨鱼处于食物链上端，容易累积较多的汞污染。许多种鲨鱼成长缓慢，繁殖量小，一经滥捕需要很长时间才可能恢复。此外，一个地区如果缺乏顶级掠食者，次级掠食者会繁殖过量，吞噬其他鱼贝类，造成生态系统崩溃。</p>
 <p>循环农场联盟（Recirculating Farms Coalition）的执行董事玛丽安·科芬（Marianne Cufone）提醒，有时鲨鱼会被切碎，冒充为扇贝出售。如果分切扇贝的大小和形状相同，有可能是鲨鱼肉。</p>
 <p>另外，被称作岩鲑鱼（Rock salmon）的炸鱼条，实际上鱼肉来源于数种鲨鱼，如：白斑角鲨（spiny dogfish）、斑点猫鲨（bull huss）、宽鼻星鲨（starry smooth-hound）等。由于欧洲人喜欢吃“岩鲑鱼”，因此白斑角鲨东北大西洋的种群已经频临灭绝。</p>
@@ -31,7 +31,7 @@
 <p>美国的进口鲶鱼中，将近90%来自越南，其中可能使用了美国不许可的抗生素。尽管去年起，FDA已开始加强对进口水产的管控，要求外国的供应链，必须符合美国规范，并接受稽核。但是，这些水产还是较有安全上的疑虑。</p>
 <p><strong>替代选择：</strong>可以多食用美国本土养殖的鲶鱼，这些鲶鱼生产过程往往更安全。此外，也可以食用亚洲鲤鱼（Asian carp），这是一种外来的淡水鱼，和鲶鱼、罗非鱼有相似的口感。过去，美国人以为亚洲鲤鱼不干净，事实上亚洲鲤鱼富含蛋白质，并且汞含量低，是很好的食用鱼。</p>
 <h3>3. 中国养殖的罗非鱼（Tilapia，非洲鲫、吴郭鱼、金凤鱼）</h3>
-<figure id="attachment_11281122" style="width: 600px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2017/04/shutterstock_377939698-1.jpg"><img class="size-large wp-image-11281122" src="https://i.epochtimes.com/assets/uploads/2017/04/shutterstock_377939698-1-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">中国出口的罗非鱼，曾被验出抗生素残留、违禁药品超标等。。（shutterstock）</figcaption></figure>
+<figure id="attachment_11281122" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/04/shutterstock_377939698-1.jpg"><img class="size-large wp-image-11281122" src="https://i.epochtimes.com/assets/uploads/2017/04/shutterstock_377939698-1-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">中国出口的罗非鱼，曾被验出抗生素残留、违禁药品超标等。。（shutterstock）</figcaption></figure>
 <p>罗非鱼不是一个品种，是慈鲷科十几种鱼的统称。罗非鱼是美国人最喜欢的水产之一，消费量仅次于虾、鲔鱼和鲑鱼。罗非鱼原产于非洲，因杂食易饲养，且生长快速，在狭小的水域就可生长，在135个国家都有养殖。</p>
 <p>目前罗非鱼的年产量约600公吨，中国约占160～180公吨，在强大的市场需求下，养殖场如雨后春笋般快速出现，部分养殖场缺乏适当管理，环境十分恶劣。许多中国罗非鱼养殖场，习惯使用腐败食物、家畜粪便作为饲料。中国出口的罗非鱼，也曾被验出抗生素残留、违禁药品超标等。</p>
 <p><strong>替代选择：</strong>尽量选择美国、厄瓜多尔、秘鲁、哥伦比亚、墨西哥、台湾或印尼生产的罗非鱼。台湾自行育种的罗非鱼称为“台湾鲷”，其中顶级的“潮鲷”味道鲜美，已通过日本进口的120项药物检验，成为高级料理店使用的生鱼片。</p>
@@ -47,7 +47,7 @@
 <p>然而，大西洋大比目鱼寿命可达50岁，成熟期慢，需要数十年的时间才可能恢复数量。且经过生物累积，大比目鱼体内汞含量可能较高，建议减少食用，每周最多不超过18盎司。</p>
 <p><strong>替代选择：</strong>建议食用太平洋大比目鱼（Pacific Halibut）或拟庸鲽鱼（Flathead Sole）这些数量充足的比目鱼。</p>
 <h3>6. 野生鱼子酱（Wild Caviar）</h3>
-<figure id="attachment_11859042" style="width: 600px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2017/04/shutterstock_183251114.jpg"><img class="size-large wp-image-11859042" src="https://i.epochtimes.com/assets/uploads/2017/04/shutterstock_183251114-600x400.jpg" alt="随着数千年的渔猎，许多种为人们提供鱼子的鲟鱼，数量都岌岌可危。(Shutterstock)" width="600" b="400" /></a><figcaption class="wp-caption-text">随着数千年的渔猎，许多种为人们提供鱼子的鲟鱼，数量都岌岌可危。(Shutterstock)</figcaption></figure>
+<figure id="attachment_11859042" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/04/shutterstock_183251114.jpg"><img class="size-large wp-image-11859042" src="https://i.epochtimes.com/assets/uploads/2017/04/shutterstock_183251114-600x400.jpg" alt="随着数千年的渔猎，许多种为人们提供鱼子的鲟鱼，数量都岌岌可危。(Shutterstock)" width="600" b="400" /></a><figcaption class="wp-caption-text">随着数千年的渔猎，许多种为人们提供鱼子的鲟鱼，数量都岌岌可危。(Shutterstock)</figcaption></figure>
 <p>公元前4世纪，希腊学者亚里士多德就曾纪录，鲟鱼鱼子酱深受古希腊人喜爱。古罗马人与古波斯人更认为，鱼子酱有医疗功效。随着数千年的渔猎，许多种为人们提供鱼子的鲟鱼，数量都岌岌可危，尤其是最知名的欧鳇鲟（Beluga），在野外已濒临灭绝。</p>
 <p>欧鳇鲟又称黑海鲟，是世界上最大的淡水鱼之一，是一种大型的晚熟鱼类。成熟后体长可达7公尺，重量约1500公斤，寿命可超过100年。雄性在12～16岁时性成熟，而雌性在16～22岁时才能开始繁殖，且要4～7年才会产卵一次。</p>
 <p>漫长的生命史，让它们的数量很难恢复，加上繁殖期雌鱼会逆流而上，到上游产卵。但许多河流都建起水坝，干扰了他们的产卵路线。因此，任何野生的鱼子酱都应避免食用。</p>
@@ -64,7 +64,7 @@
 <p>鲔鱼是海洋中的大型掠食性鱼类，容易累积甲基汞，多次被验出汞含量超过法定限制。因此，为了健康与生态，都应该减少食用鲔鱼罐头、鲔鱼生鱼片。</p>
 <p><strong>替代选择：</strong>可以改吃鲣鱼（Skipjack Tuna），鲣鱼与鲔鱼同属鲭科，口感相当类似。但体型较小、生命史短，体内的汞污染较少，生态恢复力高。制作沙拉时，沙丁鱼罐头也是很好的选择。你甚至可选择罐头鸡胸肉，来代替食谱中的罐头鲔鱼肉。</p>
 <h3>9. 鳗鱼（Eel）</h3>
-<figure id="attachment_11859047" style="width: 600px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2017/04/eel-645641_1280.jpg"><img class="size-large wp-image-11859047" src="https://i.epochtimes.com/assets/uploads/2017/04/eel-645641_1280-600x400.jpg" alt="随着蒲烧鳗的盛行，多年下来，不仅让日本鳗濒临灭绝，连欧洲鳗、美洲鳗都十分稀少，急需保育。(Pixabay)" width="600" b="400" /></a><figcaption class="wp-caption-text">随着蒲烧鳗的盛行，多年下来，不仅让日本鳗濒临灭绝，连欧洲鳗、美洲鳗都十分稀少，急需保育。(Pixabay)</figcaption></figure>
+<figure id="attachment_11859047" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/04/eel-645641_1280.jpg"><img class="size-large wp-image-11859047" src="https://i.epochtimes.com/assets/uploads/2017/04/eel-645641_1280-600x400.jpg" alt="随着蒲烧鳗的盛行，多年下来，不仅让日本鳗濒临灭绝，连欧洲鳗、美洲鳗都十分稀少，急需保育。(Pixabay)" width="600" b="400" /></a><figcaption class="wp-caption-text">随着蒲烧鳗的盛行，多年下来，不仅让日本鳗濒临灭绝，连欧洲鳗、美洲鳗都十分稀少，急需保育。(Pixabay)</figcaption></figure>
 <p>日本人是最爱吃鳗鱼的民族，全世界生产的鳗鱼中，约有70％成了日本人的盘中飧。从江户时代开始，日本人就有在夏天吃鳗鱼的习惯。</p>
 <p>在江户时代，民间流传在七月的“土用丑日”，需要食用发音有“う”开头的食材，才能强身健体，度过炎热的夏天。然而，这样的食材很多，如：鳗鱼（うなぎ）、梅干（うめぼし）、瓜（うり）都是，为何独独鳗鱼成为一种习俗呢？</p>
 <p>相传，当时有一个生意不佳的鳗鱼店主，跟博物学者平贺源内请益，要怎么样才能改善销量。平贺源内提议，不妨在丑日这天，挂上“本日丑之日”的牌子招引客人。结果生意大好，其它鳗鱼店也跟着仿效，于是土用丑日吃鳗鱼渐成一种习惯。蒲烧鳗也成为了夏日必吃的美食。</p>
@@ -83,47 +83,53 @@
 <p>人们曾认为，深海鱼为了抗冻，体内有较多的油脂，可以让人摄取更多健康鱼油。较高的水压造就出细腻鲜美的肉质，是不可多得的佳肴。符合以上两点的深海橘鲈，在1970年代开始商业捕捞后，深获市场欢迎，短短40年间，就面临了过度捕捞的危机。</p>
 <p>在刚开始捕捞时，人们认为深海橘鲈的寿命大约只有30年。然而，随着采集样本不断打破纪录，如今科学家已发现，深海橘鲈是一种拥有超长寿命的鱼类。</p>
 <p>透过研究它们的耳石（otolith，脊椎动物内耳内里的碳酸钙结晶），发现深海橘鲈的寿命可超过200岁，需要生长到20岁以上，才有繁殖能力，一旦过度捕捞数量极难恢复。超长的寿命，容易让它们体内累积大量的汞，因此不适合经常食用。</p>
-<p><strong>替代选择：</strong>建议可以改吃大西洋黑鲈鱼（Black Sea Bass），在2017、2018年美国国家海洋渔业局（NMFS）的种群评估中，都显示这种鱼类数量稳定，可供食用，且肉质口感细腻。</p>
-<p>浏览<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/liahn236/djy/blob/master/gb/nsc1002.md" target="_blank" rel="noopener noreferrer">大纪元健康1+1频道</a></span></span>，了解更多健康知识！</p>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/liahn236/djy/blob/master/gb/17/1/19/n8722877.md" target="_blank" rel="noopener noreferrer">新鲜鱼怎么挑？ 4技巧让你成为挑鱼高手</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/liahn236/djy/blob/master/gb/19/5/7/n11238760.md" target="_blank" rel="noopener noreferrer">蔬果 肉类和海鲜? 1篇看懂食材保存秘诀</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/liahn236/djy/blob/master/gb/19/6/12/n11316170.md" target="_blank" rel="noopener noreferrer">高脂鱼含大量好脂肪 抗炎减重 还能改善视力</a></span></h3>
+<p><strong>替代选择：</strong>建议可以改吃大西洋黑鲈鱼（Black Sea Bass），在2017、2018年美国国家海洋渔业局（NMFS）的种群评估中，都显示这种鱼类数量稳定，可供食用，且肉质口感细腻。◇</p>
+<p>浏览<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1" target="_blank" rel="noopener noreferrer">大纪元健康1+1频道</a></span></span>，了解更多健康知识！</p>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/tjvrql262/djy/blob/master/gb/17/1/19/n8722877.md#1" target="_blank" rel="noopener noreferrer">新鲜鱼怎么挑？ 4技巧让你成为挑鱼高手</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/tjvrql262/djy/blob/master/gb/19/5/7/n11238760.md#1" target="_blank" rel="noopener noreferrer">蔬果 肉类和海鲜? 1篇看懂食材保存秘诀</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/tjvrql262/djy/blob/master/gb/19/6/12/n11316170.md#1" target="_blank" rel="noopener noreferrer">高脂鱼含大量好脂肪 抗炎减重 还能改善视力</a></span></h3>
 <p>责任编辑：李清风</p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/17/4/11/n9025454.htm">别吃这12种海鲜！为何不要吃 + 吃什么鱼好</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798917.htm">武汉肺炎无法排除人传人 美国务院警告防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798091.htm">日本现首例武汉肺炎 机场加强防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11796789.htm">港卫生防护中心：武汉肺炎一患者 未涉足街市 疑人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11795520.htm">新型冠状病毒 近距离接触恐人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11793955.htm">武汉肺炎疑现人传人 夫妻先后发病</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎死亡惊人 武汉日烧百具死尸</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852540.htm">政治局常委会要求落空 新医学专家否定老专家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11855017.htm">武汉火神山医院内部爆料：每天死亡数百人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11854939.htm">【翻墙必看】大疫当前 中共高层内斗加剧</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849036.htm">【历史上的瘟疫】被瘟疫摧毁的强大雅典</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/29/n11828782.htm">250岁的隐士 娓娓道出前朝旧事</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/30/n11833429.htm">乌鸦满天飞 预兆什么灾？如何消解？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/1/n11836330.htm">孝女感动神仙  孝心精诚穿越时空得护祐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852148.htm">悼预警武汉肺炎医生 章子怡怒斥警方“耻辱”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849645.htm">痛斥林郑限制佩戴口罩 关淑怡：施政似武则天</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852799.htm">小区现新冠病毒患者 陈浩明一家六口宅在家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852560.htm">被疑撑香港医护罢工 郭富城声明账号被盗用</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11850031.htm">儿子滑雪意外受伤 袁咏仪：这个年过得不容易</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11850022.htm">【胡乃文开讲】抗武汉肺炎 提升免疫力是关键！中医防疫3招</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11856378.htm">【专访】欧洲专家：新冠病毒疑似实验室产生</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850690.htm">【十字路口】李文亮病逝 武汉肺炎致七大危机</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853323.htm">【独家】一天烧百具尸体 殡仪馆员怒斥狗官</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853087.htm">【疫情最前线】证据指中共研发致命生化武器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853273.htm">深圳突“封城”大批民众涌入香港</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/3/23/n8959029.md#1">想不到鱼油等8种保健食品 吃太多反有害健康</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/3/16/n8932480.md#1">深海鱼小心吃 这两种鲔鱼含汞超标</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/1/27/n8751085.md#1">转基因苹果将在美国上市 引发食品安全忧虑</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/1/19/n8722877.md#1">新鲜鱼怎么挑？ 4技巧让你成为挑鱼高手</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/1/19/n8720062.md#1">吃霸王餐不脸红 海豹上岸向海鲜店讨食物</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/5/31/n7950542.md#1">最应避免入口的十种食品成分</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/liahn236/djy/blob/master/gb/17/4/11/n9025454.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/liahn236/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/liahn236/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/liahn236/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/19/n9970937.md#1" target="_blank">严家伟：访“共产主义接班人”的集体大坟场</a></li><li><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/11/n11315892.md#1" target="_blank">河北一位电器维修师无悔的信念</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/4/11/n9025454.htm">别吃这12种海鲜！为何不要吃 + 吃什么鱼好</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/17/4/11/n9025454.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
